--- a/papers/acronyms/acronyms.tex
+++ b/papers/acronyms/acronyms.tex
@@ -1,3 +1,27 @@
-\chapter{Acronyms}
-
-a;lksdjf
+\newacronym{SOC}{SOC}{spin-orbit coupling}
+\newacronym{NSOC}{NSOC}{non-spin-orbit coupling}
+\newacronym{SDW}{SDW}{spin-density wave}
+\newacronym{PLD}{PLD}{periodic lattice displacement}
+\newacronym{FET}{FET}{field-effect transistor}
+\newacronym{BZ}{BZ}{Brillouin Zone}
+\newacronym{T}{T}{time-reversal}
+\newacronym{DFT}{DFT}{density functional theory}
+\newacronym{GeTe}{GeTe}{germanium telluride}
+\newacronym{OAM}{OAM}{orbital angular momentum}
+\newacronym{Ge}{Ge}{germanium}
+\newacronym{Te}{Te}{tellurium}
+\newacronym{Gd}{Gd}{gadolinium}
+\newacronym{Mn}{Mn}{manganese}
+\newacronym{Cr}{Cr}{chromium}
+\newacronym{DOS}{DOS}{density of states}
+\newacronym{AFM}{AFM}{antiferromagnetic}
+\newacronym{XFEL}{XFEL}{x-ray free-electron laser}
+\newacronym{OP}{OP}{order parameter}
+\newacronym{DW}{DW}{domain wall}
+\newacronym{PFM}{PFM}{piezoresponse force microscopy}
+\newacronym{CRFM}{CRFM}{contact resonance force microscopy}
+\newacronym{GLD}{GLD}{Ginzburg-Landau-Devonshire}
+\newacronym{FEM}{FEM}{Finite Elements Method}
+\newacronym{BF}{BF}{Bloch function}
+\newacronym{WF}{WF}{Wannier function}
+\newacronym{MLFW}{MLFW}{maximally localized Wannier functions}
