--- a/papers/references.bib
+++ b/papers/references.bib
@@ -4384,7 +4384,7 @@ year = {2008}
 }
 
 @article{Thonhauser2011,
-abstract = {In this review article, we survey the relatively new theory of orbital magnetization in solids — often referred to as the "modern theory of orbital magnetization" — and its applications. Surprisingly, while the calculation of the orbital magnetization in finite systems such as atoms and molecules is straight forward, in extended systems or solids it has long eluded calculations owing to the fact that the position operator is ill-defined in such a context. Approaches that overcome this problem were first developed in 2005 and in the first part of this review we present the main ideas reaching from a Wannier function approach to semi-classical and finite-temperature formalisms. In the second part, we describe practical aspects of calculating the orbital magnetization, such as taking k-space derivatives, a formalism for pseudopotentials, a single k-point derivation, a Wannier interpolation scheme, and DFT specific aspects. We then show results of recent calculations on Fe, Co, and Ni. In the last part of this review, we focus on direct applications of the orbital magnetization. In particular, we will review how properties such as the nuclear magnetic resonance shielding tensor and the electron paramagnetic resonance g-tensor can be elegantly calculated in terms of a derivative of the orbital magnetization.},
+abstract = {In this review article, we survey the relatively new theory of orbital magnetization in solids — often referred to as the "modern theory of orbital magnetization" — and its applications. Surprisingly, while the calculation of the orbital magnetization in finite systems such as atoms and molecules is straight forward, in extended systems or solids it has long eluded calculations owing to the fact that the position operator is ill-defined in such a context. Approaches that overcome this problem were first developed in 2005 and in the first part of this review we present the main ideas reaching from a Wannier function approach to semi-classical and finite-temperature formalisms. In the second part, we describe practical aspects of calculating the orbital magnetization, such as taking k-space derivatives, a formalism for pseudopotentials, a single k-point derivation, a Wannier interpolation scheme, and \gls{DFT} specific aspects. We then show results of recent calculations on Fe, Co, and Ni. In the last part of this review, we focus on direct applications of the orbital magnetization. In particular, we will review how properties such as the nuclear magnetic resonance shielding tensor and the electron paramagnetic resonance g-tensor can be elegantly calculated in terms of a derivative of the orbital magnetization.},
 author = {Thonhauser, T.},
 doi = {10.1142/S0217979211058912},
 file = {:home/ponet/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Thonhauser - 2011 - Theory of orbital magnetization in solids.pdf:pdf},
@@ -6487,7 +6487,7 @@ year = {2013}
 }
 
 @article{Park2015,
-abstract = {Despite its history, the microscopic mechanism for the Rashba spin-band splitting was not well understood. It was very recently pointed out that local orbital angular momentum (OAM) plays a crucial role in the Rashba effect. Subsequently, an effective Hamiltonian was proposed. The proposed Hamiltonian was found to not only explain all the known aspects of the Rashba phenomena but also correctly predict properties that were not known before. It brings about shifts from spin-based to OAM-based approaches in the understanding of the Rashba effect. Here, we review the developments in the new approach. Starting from a brief introduction, issues in the conventional understanding of the Rashba effect are discussed. It is then described in detail that local OAM results in significant electrostatic energy which along with the atomic spin-orbit coupling explains the Rashba effect. Experimental evidences for the existence of OAM from circular dichroism in angle resolved photoemission, thus the validity of the model, are also reviewed.},
+abstract = {Despite its history, the microscopic mechanism for the Rashba spin-band splitting was not well understood. It was very recently pointed out that local orbital angular momentum (OAM) plays a crucial role in the Rashba effect. Subsequently, an effective Hamiltonian was proposed. The proposed Hamiltonian was found to not only explain all the known aspects of the Rashba phenomena but also correctly predict properties that were not known before. It brings about shifts from spin-based to \gls{OAM}-based approaches in the understanding of the Rashba effect. Here, we review the developments in the new approach. Starting from a brief introduction, issues in the conventional understanding of the Rashba effect are discussed. It is then described in detail that local \gls{OAM} results in significant electrostatic energy which along with the atomic spin-orbit coupling explains the Rashba effect. Experimental evidences for the existence of \gls{OAM} from circular dichroism in angle resolved photoemission, thus the validity of the model, are also reviewed.},
 author = {Park, Seung Ryong and Kim, Changyoung},
 doi = {10.1016/j.elspec.2014.12.009},
 file = {:home/ponet/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Park, Kim - 2015 - Microscopic mechanism for the Rashba spin-band splitting Perspective from formation of local orbital angular momentum.pdf:pdf;:home/ponet/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Park, Kim - 2015 - Microscopic mechanism for the Rashba spin-band splitting Perspective from formation of local orbital angular momen(2).pdf:pdf},
@@ -6734,7 +6734,7 @@ year = {1978}
 }
 
 @article{Inoue2015,
-abstract = {The photovoltaic (PV) effect in polar materials offers great potential for light-energy conversion that generates a voltage beyond the bandgap limit of present semiconductor-based solar cells. Ferroelectrics have received renewed attention because of the ability to deliver a high voltage in the presence of ferroelastic domain walls (DWs). In recent years, there has been considerable debate over the impact of the DWs on the PV effects, owing to lack of information on the bulk PV tensor of host ferroelectrics. In this article, we provide the first direct evidence of an unusually large PV response induced by ferroelastic DWs-termed-PV effect. The precise estimation of the bulk PV tensor in single crystals of barium titanate enables us to quantify the giant PV effect driven by 90° DWs. We show that the DW-PV effect arises from an effective electric field consisting of a potential step and a local PV component in the 90° DW region. This work offers a starting point for further investigation into the DW-PV effect of alternative systems and opens a reliable route for enhancing the PV properties in ferroelectrics based on the engineering of domain structures in either bulk or thin-film form.},
+abstract = {The photovoltaic (PV) effect in polar materials offers great potential for light-energy conversion that generates a voltage beyond the bandgap limit of present semiconductor-based solar cells. Ferroelectrics have received renewed attention because of the ability to deliver a high voltage in the presence of ferroelastic domain walls (DWs). In recent years, there has been considerable debate over the impact of the DWs on the PV effects, owing to lack of information on the bulk PV tensor of host ferroelectrics. In this article, we provide the first direct evidence of an unusually large PV response induced by ferroelastic DWs-termed-PV effect. The precise estimation of the bulk PV tensor in single crystals of barium titanate enables us to quantify the giant PV effect driven by 90° DWs. We show that the DW-PV effect arises from an effective electric field consisting of a potential step and a local PV component in the 90° \gls{DW} region. This work offers a starting point for further investigation into the DW-PV effect of alternative systems and opens a reliable route for enhancing the PV properties in ferroelectrics based on the engineering of domain structures in either bulk or thin-film form.},
 author = {Inoue, Ryotaro and Ishikawa, Shotaro and Imura, Ryota and Kitanaka, Yuuki and Oguchi, Takeshi and Noguchi, Yuji and Miyayama, Masaru},
 doi = {10.1038/srep14741},
 file = {:home/ponet/Downloads/srep14741.pdf:pdf},
