--- a/papers/reports/Radaelli_comments.tex
+++ b/papers/reports/Radaelli_comments.tex
@@ -16,7 +16,7 @@ In what follows below, I have compiled the list of remarks each with my reply or
 {\bf Page 10:}~{\it The candidate states: ``Without loss of generality, we choose this point to be the gamma point.'' This does not appear to be obvious, because not all T-invariant points are equivalent. Can this be better explained?}
 \\\\
 % This is true. What is meant here is that for the purpose of the derivation only $\bm k_r = \bm k - \bm \bm k_0$ matters. Whether $\bm k_0 = \bm 0$ or another T-invariant point changes what the $|u_n, \sigma>$ are in Eq.(2.14).
-{\bf Page 17:}~{\it Why is the exact experimental unit cell not used in this case? Is the unit cell used here the result of DFT optimisation?}
+{\bf Page 17:}~{\it Why is the exact experimental unit cell not used in this case? Is the unit cell used here the result of \gls{DFT} optimisation?}
 \\\\
 No particular reason.
 \\\\
@@ -24,7 +24,7 @@ No particular reason.
 \\\\
 I have added $A \leftarrow Z \rightarrow U$ to this and the following figure.
 \\\\
-{\bf Page 36, Fig.~3.1:}~{\it This figure is not at all clear, partly due to the fact that only few spin directions are indicated. One should first of all sttate in the caption that the chains are AFM, but also indicate some of the spins so that the fragments in panels b) and c) can be identified in the larger structure.}
+{\bf Page 36, Fig.~3.1:}~{\it This figure is not at all clear, partly due to the fact that only few spin directions are indicated. One should first of all sttate in the caption that the chains are \gls{AFM}, but also indicate some of the spins so that the fragments in panels b) and c) can be identified in the larger structure.}
 \\\\
 Thank you for this suggestion, I have added the spins corresponding to b) and c) in a).
 I have also added a more explicit statement of the AFM nature of the chains in the caption.
@@ -93,7 +93,7 @@ I have corrected this in the caption.
 \\\\
 I have expanded the discussion to:
 
-``Finally, it was experimentally verified that no timescales related to the behavior of topological defects such as domain walls are present. This would be reflected in a changing width and intensity of the diffraction peaks associated with the PLD (Fig.~1.1(b)), which is not observed. This can be explained by the small thickness of the film, allowing only a single SDW wavevector direction, such that no domains are formed in the ``depth'' of the film. Furthermore, the XFEL pulses had a diameter of 0.2 mm, w hich envelopes multiple SDW domains in the plane of the film [Nicholson2016], making the measurements statistical over domains.
+``Finally, it was experimentally verified that no timescales related to the behavior of topological defects such as domain walls are present. This would be reflected in a changing width and intensity of the diffraction peaks associated with the \gls{PLD} (Fig.~1.1(b)), which is not observed. This can be explained by the small thickness of the film, allowing only a single \gls{SDW} wavevector direction, such that no domains are formed in the ``depth'' of the film. Furthermore, the XFEL pulses had a diameter of 0.2 mm, w hich envelopes multiple \gls{SDW} domains in the plane of the film [Nicholson2016], making the measurements statistical over domains.
 These considerations also support our previous claim that the optical pulses can be assumed to excite the thin film homogeneously.''
 \\\\
 {\bf Page 80:}~{\it I found the introduction to Chapter 5 rather unsatisfactory. Why is the problem of FE soft domain walls interesting/relevant (i.e., who cares)? The link to the possibility of using the described effect for information storage seems rather remote. It would be much preferable if a
