--- a/papers/Wannier/Wannier.tex
+++ b/papers/Wannier/Wannier.tex
@@ -1,4 +1,4 @@
-\chapter{Wannier Functions \label{ch:Wannier}}
+\chapter{Wannier functions \label{ch:Wannier}}
 % or indirectly to parametrize the magnetic exchanges between localized spins as in Chapter \ref{ch:GdMn2O5}, .
 Tight-Binding models have appeared in various forms throughout history, originally proposed by Bloch \cite{Bloch1929}, and sometimes also referred to as the {\it linear combination of atomic orbitals} method \cite{Slater1954}.
 This last description hints at how they are constructed.
@@ -10,44 +10,44 @@ The elements of the Hamiltonian are then calculated from the overlap integrals b
 \end{equation}
 where $\Ket{\alpha^{\bm i}}$ is the orbital $\alpha$ located on ionic site $i$ with center $\bm R_i$, and $t^{\bm i \bm j}_{\alpha \beta}$ the {\it hopping parameters} between the two orbitals, because they describe the process of annihilating an electron from orbital $\Ket{\beta^{\bm j}}$ and creating it on $\Ket{\alpha^{\bm i}}$.
 This Hamiltonian is periodic in the sense that if both $\Ket{\beta^{\bm j}}$ and $\Ket{\alpha^{\bm i}}$ are shifted by the same lattice translation, the hopping parameter will remain unchanged.
-Fourier transforming and diagonalizing the Hamiltonian then leads to the Bloch functions (BF) and electronic band structure of the crystal \cite{Ashcroft}.
+Fourier transforming and diagonalizing the Hamiltonian then leads to the \glspl{BF} and electronic band structure of the crystal \cite{Ashcroft}.
 
-Another way of constructing such a model is by extracting the localized orbitals and hopping parameters from a first-principles based calculation such as DFT. In Chapter~\ref{ch:Rashba} that describes the Rashba spin-splitting in germanium telluride, we opt for this method.
+Another way of constructing such a model is by extracting the localized orbitals and hopping parameters from a first-principles based calculation such as \gls{DFT}. In Chapter~\ref{ch:Rashba} that describes the Rashba spin-splitting in GeTe, we opt for this method.
 This circumvents the need to perform many experiments in order to investigate the details of the band structure, and how certain effects are manifested in different materials. 
 
-The main question to answer then becomes how to define such a set of localized orbitals starting from the extended BFs written in terms of the plane-wave basis set that is used in DFT.
-There are many ways to do this, but the most natural one, in this case, is by using a set of Wannier functions (WF) \cite{Wannier1937} as the target localized basis.
+The main question to answer then becomes how to define such a set of localized orbitals starting from the extended \glspl{BF} written in terms of the plane-wave basis set that is used in \gls{DFT}.
+There are many ways to do this, but the most natural one, in this case, is by using a set of \glspl{WF} \cite{Wannier1937} as the target localized basis.
 
-We will here give a short recap of the excellent reviews by Marzari et. al. \cite{Marzari2003,Marzari2012}, starting with the clearest case of a single isolated band $n$ with BFs $\BlochKet{n}$ (see the red window in Fig.~\ref{fig:Theory_blochvswan}(b)).
-The BF can then be written as a straightforward discrete Fourier transform of the WF: 
+We will here give a short recap of the excellent reviews by Marzari et. al. \cite{Marzari2003,Marzari2012}, starting with the clearest case of a single isolated band $n$ with \glspl{BF} $\BlochKet{n}$ (see the red window in Fig.~\ref{fig:Theory_blochvswan}(b)).
+The \gls{BF} can then be written as a straightforward discrete Fourier transform of the \gls{WF}: 
 \begin{equation}
 	\label{eq:Theory_1bandwan}
 	\BlochKet{n} = \eikr{r} \unkKet{n}{k} = \sum_{\bm{R}} \eikr{R} \WanKet{n}{R},
 \end{equation}
-with $\WanKet{n}{R}$ denoting the localized WF centered in the unit cell defined by lattice vector $\bm{R}$, and $n$ the band index.
-The comparison between BFs and WFs is made in Fig.~\ref{fig:Theory_blochvswan}.
+with $\WanKet{n}{R}$ denoting the localized \gls{WF} centered in the unit cell defined by lattice vector $\bm{R}$, and $n$ the band index.
+The comparison between \glspl{BF} and \glspl{WF} is made in Fig.~\ref{fig:Theory_blochvswan}.
 \begin{figure}
 	\IncludeGraphics{blochvswan.png}
 	\caption{\label{fig:Theory_blochvswan} a) A comparison between Bloch functions (left) and Wannier functions (right). The green graph in the left panel denotes the envelope function $\eikr{r}$, whereas the black one denotes the periodic part $\unkKet{n}{k}$. This image was taken from Ref.~\cite{Marzari2012}. b) Bandstructure of semiconductor GeTe, demonstrating three cases for Wannierization: red is a single disconnected band, green shows a disconnected composite manifold of bands, blue shows the situation when bands need to be disentangled.}
 \end{figure}
-When $k=0$ we can see that $\unkKet{n}{k}$ is simply the sum over the WFs centered at different unit cells.
-In the case of $k \neq 0$, similar to how the envelope part modulates the periodic part of the BF, the contribution of each WF to the total sum needs to be modulated discretely through $\eikr{R}$.
+When $k=0$ we can see that $\unkKet{n}{k}$ is simply the sum over the \glspl{WF} centered at different unit cells.
+In the case of $k \neq 0$, similar to how the envelope part modulates the periodic part of the \gls{BF}, the contribution of each \gls{WF} to the total sum needs to be modulated discretely through $\eikr{R}$.
 
-The inverse Fourier transform over the BF in the first Brillouin Zone (BZ) can then be performed in order to generate the localized WFs,
+The inverse Fourier transform over the \gls{BF} in the first \gls{BZ} can then be performed in order to generate the localized \glspl{WF},
 \begin{equation}
 	\label{eq:Theory_wanfourier}
 	\WanKet{n}{R} = \frac{V}{(2\pi)^3} \int_{BZ} d \bm{k} \inveikr{R} \BlochKet{n},
 \end{equation}
 where $V$ denotes the real-space volume of the unit cell.
 In these and following equations, the normalization convention is used such that $\int_V d\bm{r}\BraKet{\Blochr{n}} = 1$.
-As can be seen from the right panel in Fig.~\ref{fig:Theory_blochvswan}, WFs centered in different unit cells are shifted copies of one another.
+As can be seen from the right panel in Fig.~\ref{fig:Theory_blochvswan}, \glspl{WF} centered in different unit cells are shifted copies of one another.
 
-One of the most useful properties of the WFs lies in the realization that, through the gauge freedom at each $\bm{k}$ of the BF\footnote{The solution to Schr\"odinger equation does not determine uniquely its phase.}, the shape of the WFs is not unique:
+One of the most useful properties of the \glspl{WF} lies in the realization that, through the gauge freedom at each $\bm{k}$ of the \gls{BF}\footnote{The solution to Schr\"odinger equation does not determine uniquely its phase.}, the shape of the \glspl{WF} is not unique:
 \begin{align}
 	\BlochKet{n} &\Rightarrow \tildeBlochKet{n} = e^{i \phi_n^{\bm{k}}} \BlochKet{n},\\
 	\WanKet{n}{R} &\Rightarrow \tildeWanKet{n}{R} = \frac{V}{(2\pi)^3} \int_{BZ} d \bm{k} e^{-i (\bm{k} \cdot \bm{R} + \phi_n^{\bm{k}})} \BlochKet{n}.
 \end{align}
-This means that by varying $\phi_n^{\bm{k}}$ we can adapt the WF basis in order for it to fulfill certain symmetries, or to localize the WFs as much as possible.
+This means that by varying $\phi_n^{\bm{k}}$ we can adapt the \gls{WF} basis in order for it to fulfill certain symmetries, or to localize the \glspl{WF} as much as possible.
 
 In most practical problems we are interested in groups of bands, rather than just a single band.
 The easiest case is when these form a composite manifold that is detached from other bands, such as the green valence bands in Fig.~\ref{fig:Theory_blochvswan}(b).
@@ -56,16 +56,16 @@ It is useful to generalize the notion of the single band phase freedom $\phi_n^{
 	\label{eq:Theory_Umn}
 	\tildeBlochKet{m} = \sum_m U_{nm}^{\bm{k}} \BlochKet{n},
 \end{equation}
-where $n,m$ enumerate the bands inside the composite manifold and the tilde is used to distinguish between $\tildeBlochKet{m}$ and the original BFs.
+where $n,m$ enumerate the bands inside the composite manifold and the tilde is used to distinguish between $\tildeBlochKet{m}$ and the original \glspl{BF}.
 We do this because these transformed states are no longer eigenstates of the Hamiltonian if $U_{nm}^{\bm{k}}$ has off-diagonal elements.
 Traces performed over such an isolated set of bands are invariant w.r.t. to these gauge transformations, leading to the invariance of observables such as the Hamiltonian which lies at the core of the ability to isolate and focus on this subproblem.
-Choosing a decent gauge, in this case, is a necessity to extract well-localized WFs.
-This is because composite band manifolds will generally harbor band crossings and degeneracies where the BFs become non analytic making $\frac{\partial \unkr{n}{k}}{\partial \bm k}$ not smooth.
-When the inverse Fourier transform is then performed on the BFs themselves, this non smoothness will result in badly localized real-space WFs.
+Choosing a decent gauge, in this case, is a necessity to extract well-localized \glspl{WF}.
+This is because composite band manifolds will generally harbor band crossings and degeneracies where the \glspl{BF} become non analytic making $\frac{\partial \unkr{n}{k}}{\partial \bm k}$ not smooth.
+When the inverse Fourier transform is then performed on the \glspl{BF} themselves, this non smoothness will result in badly localized real-space \glspl{WF}.
 Indeed, only for smoothly varying $\unkr{n}{k}$ will cancellations appear when $\bm{R}$ is large, due to the fast varying exponent $\eikr{R}$ in Eq.~\eqref{eq:Theory_wanfourier}.
-It is thus important to choose the $U_{mn}^{\bm k}$ in Eq.~\eqref{eq:Theory_Umn} so that the rotated wavefunctions $\tildeBlochKet{n}$ vary as smoothly as possible, which will ultimately lead to the WFs that are as localized as possible when the inverse Fourier transform is performed.
+It is thus important to choose the $U_{mn}^{\bm k}$ in Eq.~\eqref{eq:Theory_Umn} so that the rotated wavefunctions $\tildeBlochKet{n}$ vary as smoothly as possible, which will ultimately lead to the \glspl{WF} that are as localized as possible when the inverse Fourier transform is performed.
 
-In order to quantify this localization of the WFs, a spread functional can be written as:
+In order to quantify this localization of the \glspl{WF}, a spread functional can be written as:
 \begin{equation}
 	\label{eq:Theory_spread}
 	\Omega =\sum_n \WanBra{n}{0}r^2\WanKet{n}{0} - \left|\WanBra{n}{0}\bm{r}\WanKet{n}{0}\right|^2,
@@ -76,7 +76,7 @@ which can be trivially split into a gauge-invariant and gauge-dependent part
 	\Omega_I &= \sum_n \left[\WanBra{n}{0} r^2 \WanKet{n}{0} - \sum_{m,\bm{R}} \left| \WanBra{m}{R} \bm{r} \WanKet{n}{0}\right|^2\right] \label{eq:Theory_omegaI},\\
 	\tilde\Omega &= \sum_{n,m} \sum_{\bm{R} \neq n,\bm{0}} \left|\WanBra{m}{R} \bm{r} \WanKet{n}{0}\right|^2.
 \end{align}
-For a set of isolated bands it thus suffices to minimize the gauge-dependent part in order to find the  unique set of maximally localized Wannier functions (MLFW)\footnote{It can be proven that these WFs will be exponentially localized in the case of normal insulators.} that consitute these bands \cite{Kunes2004, Marzari2012}.
+For a set of isolated bands it thus suffices to minimize the gauge-dependent part in order to find the  unique set of \gls{MLFW}\footnote{It can be proven that these \glspl{WF} will be exponentially localized in the case of normal insulators.} that consitute these bands \cite{Kunes2004, Marzari2012}.
 
 We can then transform the position dependent operators into reciprocal space as \cite{Blount1962}:
 \begin{equation}
@@ -87,59 +87,59 @@ and
 \WanBra{n}{R}r^2\WanKet{m}{0} = -\frac{V}{(2\pi)^3}\int d\bm{k} \eikr{R}\unkBra{n}{k} \bm{\nabla}_{\bm{k}}^2 \unkKet{m}{k},
 \end{equation}
 which can be used to write and minimize $\tilde\Omega$ in terms of $\unkKet{n}{k}$ and $U_{nm}^{\bm{k}}$ directly.
-The optimal set of $U_{nm}^{\bm{k}}$ can then be used to generate the set of MLFW.
-If maximal localization is not the only goal, WFs with other desirable characteristics can be generated by tweaking the $U_{nm}^{\bm{k}}$.
-This is often done to ensure that the WFs adhere to the symmetries of atomic orbitals, which can be useful to develop a further intuitive understanding using well-known orbitals.
+The optimal set of $U_{nm}^{\bm{k}}$ can then be used to generate the set of \gls{MLFW}.
+If maximal localization is not the only goal, \glspl{WF} with other desirable characteristics can be generated by tweaking the $U_{nm}^{\bm{k}}$.
+This is often done to ensure that the \glspl{WF} adhere to the symmetries of atomic orbitals, which can be useful to develop a further intuitive understanding using well-known orbitals.
 More details on the different construction methods and can be found in Ref.~\cite{Marzari2012}.
 
 Up to now, we discussed the case of an isolated set of bands. In some cases, such a set does not exist in the energy range of interest, and the bands are connected, or {\it entangled}, with the bands outside this range.
 An example of this case is shown by the blue bands in Fig.~\ref{fig:Theory_blochvswan}(b).
-If we are seeking $J$ WFs we then need to select $J$ states $\tildeBlochKet{n}$ at each $k$-point from a bigger set $J^{\bm{k}}$:
+If we are seeking $J$ \glspl{WF} we then need to select $J$ states $\tildeBlochKet{n}$ at each $k$-point from a bigger set $J^{\bm{k}}$:
 \begin{equation}
 	\tildeBlochKet{n} = \sum_{m=1}^{J^{\bm{k}}}V_{nm}^{\bm{k}} \BlochKet{m}.
 \end{equation}
 These $\tildeBlochKet{n}$ can then be used in the previously described localization procedure.
 The matrices $V_{nm}^{\bm{k}}$ are in general rectangular with dimension $J\times J^{\bm{k}}$.
-This leads to a two-step procedure where first a subspace is selected for each $k$-point, followed by the final gauge selection to arrive at the localized basis of WFs:
+This leads to a two-step procedure where first a subspace is selected for each $k$-point, followed by the final gauge selection to arrive at the localized basis of \glspl{WF}:
 \begin{equation}
 	\label{eq:Theory_fullwan}
 	\WanKet{n}{R} = \frac{V}{(2\pi)^3} \int_{BZ} d\bm{k} e^{-i \bm{k} \cdot \bm{R}} \sum_{m=1}^J U^{\bm{k}}_{nm} \sum_{l=1}^{J^{\bm{k}}} V_{ml}^{\bm{k}} \BlochKet{l}.
 \end{equation}
 There are again many ways to do this subspace selection (or {\it disentanglement}).
-The most prevalent two are by projection onto atomic-like orbitals, or by again minimizing the total spread of the WFs.
+The most prevalent two are by projection onto atomic-like orbitals, or by again minimizing the total spread of the \glspl{WF}.
 We utilize the latter in this work.
 In this case, the maximal localization aims to find at each $k$-point the $V_{nm}^{\bm{k}}$ that leads to the maximal overlap of the selected subspace with its neighboring $k$-points.
 As discussed before, this smoothness in reciprocal space translates into the subspace as a whole being more localized in real space.
 Indeed, it can be shown \cite{Marzari2012} that this intrinsic smoothness is exactly what $\Omega_I$ measures in Eq.~\eqref{eq:Theory_omegaI}. 
-In many cases, it is desirable to adapt the algorithm so that the BFs of the bands inside a ``frozen'' energy window are exactly interpolated by the resulting WFs and associated Tight-Binding Hamiltonian.
+In many cases, it is desirable to adapt the algorithm so that the \glspl{BF} of the bands inside a ``frozen'' energy window are exactly interpolated by the resulting \glspl{WF} and associated Tight-Binding Hamiltonian.
 
 These considerations set the theoretical stage for the Wannierization procedure. In the following, we give some comments on the numerical aspects of this method.
 
-The continuous integration over the BZ in previous equations is performed on a discrete $k$ grid in numerical calculations.
+The continuous integration over the \gls{BZ} in previous equations is performed on a discrete $k$ grid in numerical calculations.
 In order to adhere closely to the continuous case, the discrete Fourier transform pair can be defined as:
 \begin{align}
 	\tildeBlochKet{n} &= \sum_{\bm{R}} \eikr{R} \WanKet{n}{R},\label{eq:Theory_wantok}\\
 	\WanKet{n}{R} &= \frac{1}{N}\sum_{\bm{k}} \inveikr{R} \tildeBlochKet{n},
 \end{align}
-where $N$ denotes the number of unit cells in the periodic supercell in real space, equal to the number of $k$-points in the discrete mesh over the BZ.
-This discretization enforces periodic boundary conditions on the BFs over this supercell, meaning that the WFs in this definition also have this supercell periodicity.
-The localization criterion then means that the WFs are localized inside the supercell.
-If the mesh spacing tends to zero, the supercell tends to infinity, restoring the earlier definitions using continuous Fourier Transforms, and the original notion of WFs.
+where $N$ denotes the number of unit cells in the periodic supercell in real space, equal to the number of $k$-points in the discrete mesh over the \gls{BZ}.
+This discretization enforces periodic boundary conditions on the \glspl{BF} over this supercell, meaning that the \glspl{WF} in this definition also have this supercell periodicity.
+The localization criterion then means that the \glspl{WF} are localized inside the supercell.
+If the mesh spacing tends to zero, the supercell tends to infinity, restoring the earlier definitions using continuous Fourier Transforms, and the original notion of \glspl{WF}.
 
-After finding the $U^{\bm{k}}_{nm}$ and $V^{\bm{k}}_{nm}$ matrices of Eq.~\eqref{eq:Theory_fullwan}, any operator $\hat{f}^{\bm{k}}$ defined in terms of the BFs can be transformed into $\hat{F}^{\bm{R}}$ in the Wannier representation.
-It is important to realize that, depending on the coarseness of the $k$ grid used in the first-principles calculation, $\hat{F}^{\bm{R}}$ can only be calculated for limited values of $|\bm{R}|$, spanning the supercell defined by the discretization of the BZ.
-Since the WFs are well localized, $\hat{F}^{\bm{R}}$ tends to decay rapidly with $|\bm{R}|$.
+After finding the $U^{\bm{k}}_{nm}$ and $V^{\bm{k}}_{nm}$ matrices of Eq.~\eqref{eq:Theory_fullwan}, any operator $\hat{f}^{\bm{k}}$ defined in terms of the \glspl{BF} can be transformed into $\hat{F}^{\bm{R}}$ in the Wannier representation.
+It is important to realize that, depending on the coarseness of the $k$ grid used in the first-principles calculation, $\hat{F}^{\bm{R}}$ can only be calculated for limited values of $|\bm{R}|$, spanning the supercell defined by the discretization of the \gls{BZ}.
+Since the \glspl{WF} are well localized, $\hat{F}^{\bm{R}}$ tends to decay rapidly with $|\bm{R}|$.
 The values of $\hat{f}^{\bm{k}}$ can then be interpolated from $\hat{F}^{\bm{R}}$ by performing the inverse procedure.
-This allows the efficient calculation of $\hat{f}^{\bm{k}}$ on a finer $k$ mesh than the one used in the DFT calculations, provided that the WFs are well localized inside the supercell.
-This efficient interpolation is one of the great advantages of using localized WFs, since the size of the WF basis, and thus dimensions of the matrices is much lower than the one used in DFT (e.g. many plane waves).
+This allows the efficient calculation of $\hat{f}^{\bm{k}}$ on a finer $k$ mesh than the one used in the \gls{DFT} calculations, provided that the \glspl{WF} are well localized inside the supercell.
+This efficient interpolation is one of the great advantages of using localized \gls{WF}, since the size of the \gls{WF} basis, and thus dimensions of the matrices is much lower than the one used in \gls{DFT} (e.g. many plane waves).
 
-The final process that we use in this Thesis to extract a Tight-Binding Hamiltonian in a WF basis, starting from an ab-initio DFT simulation, can thus be summarized as follows:
+The final process that we use in this Thesis to extract a Tight-Binding Hamiltonian in a \gls{WF} basis, starting from an ab-initio \gls{DFT} simulation, can thus be summarized as follows:
 \begin{enumerate}
-	\item Perform a self-consistent DFT calculation in order to find the ground state density and BFs on a discrete $k$ mesh.
+	\item Perform a self-consistent \gls{DFT} calculation in order to find the ground state density and \glspl{BF} on a discrete $k$ mesh.
 	\item Define the $J$ trial orbitals (e.g. atomic-like) that are most suitable for the bands or problem under investigation. This can be done e.g. by performing a density of states calculation, projecting on the atomic orbitals.
 	\item Select an inner ``frozen'' window containing the most important bands, and, if entangled, an outer window from which to disentangle a $J$-dimensional subspace for each $k$-point.
 	\item Use a projection on the trial orbitals defined in (2) as the initial guess, followed by minimization of $\Omega_I$ (Eq.~\eqref{eq:Theory_spread}) to find the $V_{ml}^{\bm{k}}$ matrices.
-	\item Find the final gauges $U_{nm}^{\bm{k}}$ minimize the spread of each of the $J$ WFs.
+	\item Find the final gauges $U_{nm}^{\bm{k}}$ minimize the spread of each of the $J$ \glspl{WF}.
 \end{enumerate}
 
 The main quantity we will use this interpolation for is the Hamiltonian:
