--- a/papers/abstract/abstract.tex
+++ b/papers/abstract/abstract.tex
@@ -37,7 +37,7 @@
 \section*{\textsc{{\huge Interplay between Complex Orders in Functional Materials}\\[0.1cm] Abstract\\[0.2cm] {\normalsize Louis Ponet}}}
 
 \vspace{0.4cm}
-In an effort to reduce the sheer complexity associated with the many degrees of freedom encountered in Condensed Matter, it is beneficial to separate the full system under investigation into smaller subsystems.
+In an effort to reduce the sheer complexity associated with the many degrees of freedom encountered in condensed matter, it is beneficial to separate the full system under investigation into smaller subsystems.
 This separation is most often performed based on energy and time scales, allowing one to focus on the subsystem with the energy scale of interest.
 The influence of the decoupled subsystems can then be approximated by either treating them as a smeared out average, leading to mean-field approximations, or as constant background potentials, resulting in adiabatic approximations. This procedure relies on the weak interaction, or coupling, between the subsystems.
 For example, in the case of the electron-phonon interaction, the influence of the electrons on the phonons, describing the displacements of the ions, can be approximated as an average charge field, with the fluctuations cancelling out on the time scales involved with the phonon dynamics.
